RESOLVED FIXED44959
[GTK] Leak in the GraphicsContextCairo drawPathShadow
https://bugs.webkit.org/show_bug.cgi?id=44959
Summary [GTK] Leak in the GraphicsContextCairo drawPathShadow
Alejandro G. Castro
Reported 2010-08-31 09:12:44 PDT
We are copying the cairo_path but we are not destroying it: cairo_path_t* path = cairo_copy_path(cr);
Attachments
Proposed patch (1.67 KB, patch)
2010-08-31 09:15 PDT, Alejandro G. Castro
no flags
Proposed patch (3.03 KB, patch)
2010-09-01 04:33 PDT, Alejandro G. Castro
mrobinson: review+
Alejandro G. Castro
Comment 1 2010-08-31 09:15:20 PDT
Created attachment 66062 [details] Proposed patch
Gustavo Noronha (kov)
Comment 2 2010-08-31 11:44:10 PDT
Comment on attachment 66062 [details] Proposed patch Can't we use a PlatformRefPtr/CairoRefPtr for this?
Alejandro G. Castro
Comment 3 2010-08-31 13:28:49 PDT
(In reply to comment #2) > (From update of attachment 66062 [details]) > Can't we use a PlatformRefPtr/CairoRefPtr for this? I've checked path is not already included, but I can do it in this same patch and use it, thanks for the comment.
Alejandro G. Castro
Comment 4 2010-09-01 04:33:50 PDT
Created attachment 66198 [details] Proposed patch Added the GOwnPtrCairo code so we can use it in these situations.
WebKit Review Bot
Comment 5 2010-09-01 04:40:46 PDT
Attachment 66198 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/graphics/cairo/GOwnPtrCairo.h:31: cairo_path_t is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alejandro G. Castro
Comment 6 2010-09-01 04:54:13 PDT
(In reply to comment #5) > Attachment 66198 [details] did not pass style-queue: > > Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 > WebCore/platform/graphics/cairo/GOwnPtrCairo.h:31: cairo_path_t is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] > Total errors found: 1 in 4 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. Yep, it is a false positive. Opened bug 45032.
Martin Robinson
Comment 7 2010-09-01 22:33:34 PDT
Comment on attachment 66198 [details] Proposed patch Looks reasonable.
Alejandro G. Castro
Comment 8 2010-09-13 11:46:44 PDT
lande r67398
Note You need to log in before you can comment on or make changes to this bug.