2010-09-13  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Leak in the GraphicsContextCairo drawPathShadow
        https://bugs.webkit.org/show_bug.cgi?id=44959

        Fix a leak of the cairo_path.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::drawPathShadow):
        * platform/graphics/cairo/OwnPtrCairo.cpp:
        (WTF::cairo_path_t):
        * platform/graphics/cairo/OwnPtrCairo.h:

Canonical link: https://commits.webkit.org/58130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67398 268f45cc-cd09-0410-ab3c-d52691b4dbfc