WebCore/platform/graphics/cairo/OwnPtrCairo.h
@@ -28,6 +28,8 @@ typedef struct _FcObjectSet FcObjectSet;
 typedef struct _FcFontSet FcFontSet;
 #endif
 
+typedef struct cairo_path cairo_path_t;
+
 namespace WTF {
 
 #if defined(USE_FREETYPE)
@@ -35,6 +37,8 @@ template <> void deleteOwnedPtr<FcPattern>(FcPattern*);
 template <> void deleteOwnedPtr<FcObjectSet>(FcObjectSet*);
 template <> void deleteOwnedPtr<FcFontSet>(FcFontSet*);
 #endif
+
+template <> void deleteOwnedPtr<cairo_path_t>(cairo_path_t*);
 
 } // namespace WTF
 
